--- a/pages/angebote.html
+++ b/pages/angebote.html
@@ -3,26 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datenschutz</title>
+    <title>Angebote</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
     <link rel="stylesheet" href="../styles/main.css">
-
 </head>
-<body>
+
+<body class="bg-gray-100">
 
     <!-- Header wird hier dynamisch geladen -->
-    <div id="header"></div>    
-    
-    <main class="max-w-7xl mx-auto p-4">
-        <h1 class="text-2xl font-bold">Datenschutz</h1>
-        <p>Hier steht alles zum Datenschutz. Füge deine Unternehmensdaten und rechtlichen Informationen ein.</p>
+    <div id="header"></div>
+
+    <main class="container mx-auto p-4 text-center">
+        <h1 class="text-3xl font-bold text-blue-600">Die heißesten Angebote</h1>
     </main>
 
     <!-- Footer wird hier dynamisch geladen -->
     <div id="footer"></div>
 
     <script src="../scripts/main.js"></script>
-    
 </body>
 </html>
