--- a/pages/datenschutz.html
+++ b/pages/datenschutz.html
@@ -14,10 +14,18 @@
     <!-- Header wird hier dynamisch geladen -->
     <div id="header"></div>    
     
-    <main class="max-w-7xl mx-auto p-4">
-        <h1 class="text-2xl font-bold">Datenschutz</h1>
-        <p>Hier steht alles zum Datenschutz. Füge deine Unternehmensdaten und rechtlichen Informationen ein.</p>
+    <!-- Hauptinhalt -->
+    <main id="datenschutz-container" class="container ml-8 mt-8 text-left">
+        <h1>Lädt Datenschutzerklärung...</h1>
     </main>
+
+    <!-- Datenschutzerklärung per JavaScript laden -->
+    <script>
+        fetch('/components/datenschutzerklaerung.html')
+            .then(response => response.text())
+            .then(data => document.getElementById('datenschutz-container').innerHTML = data)
+            .catch(error => console.error('Fehler beim Laden der Datenschutzerklärung:', error));
+    </script>
 
     <!-- Footer wird hier dynamisch geladen -->
     <div id="footer"></div>
