--- a/pages/start.html
+++ b/pages/start.html
@@ -7,13 +7,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="../styles/main.css">
 </head>
-<body class="bg-gray-100">
+<body">
 
     <!-- Header wird hier dynamisch geladen -->
     <div id="header"></div>
 
     <main class="container mx-auto p-4 text-center">
-        <h1 class="text-3xl font-bold text-blue-600">Willkommen auf meiner Affiliate-Website</h1>
+        <h1 class="text-3xl font-bold text-grey-600">Willkommen auf meiner Affiliate-Website</h1>
     </main>
 
     <!-- Footer wird hier dynamisch geladen -->
