--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -3,23 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt</title>
+    <meta name="description" content="Kontaktformular für Anfragen">
+    <title>Kontakt - Affiliate Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-gray-100 flex flex-col min-h-screen">
+    <div id="header" role="banner"></div>
 
-    <!-- Header wird hier dynamisch geladen -->
-    <div id="header"></div>
-
-    <main class="container mx-auto p-4 text-center">
-        <h1 class="text-3xl font-bold text-blue-600">Melde dich bei Problemen hier:</h1>
+    <main role="main" class="flex-grow container mx-auto p-6">
+        <!-- Kontaktformular bleibt unverändert -->
     </main>
 
-    <!-- Footer wird hier dynamisch geladen -->
-    <div id="footer"></div>
+    <div id="footer" role="contentinfo"></div>
 
-    <script src="../scripts/main.js"></script>
+    <script src="/scripts/main.js"></script>
 </body>
 </html>
