--- a/pages/datenschutz.html
+++ b/pages/datenschutz.html
@@ -3,34 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datenschutz</title>
+    <title>Datenschutz - Affiliate Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <link rel="stylesheet" href="../styles/main.css">
-
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
-<body>
 
-    <!-- Header wird hier dynamisch geladen -->
-    <div id="header"></div>    
-    
-    <!-- Hauptinhalt -->
-    <main id="datenschutz-container" class="container ml-8 mt-8 text-left">
-        <h1>Lädt Datenschutzerklärung...</h1>
+<body class="bg-gray-100 flex flex-col min-h-screen">
+    <div id="header" role="banner"></div>
+
+    <main role="main" class="flex-grow container mx-auto p-6">
+        <div id="datenschutz-container" class="max-w-3xl mx-auto bg-white rounded-lg shadow-md p-6">
+            <div class="text-center py-8">
+                <div class="loading-spinner inline-block w-8 h-8 border-4 border-blue-500 border-t-transparent rounded-full"></div>
+                <p class="mt-4 text-gray-600">Datenschutzerklärung wird geladen...</p>
+            </div>
+        </div>
     </main>
 
-    <!-- Datenschutzerklärung per JavaScript laden -->
     <script>
-        fetch('/components/datenschutzerklaerung.html')
-            .then(response => response.text())
-            .then(data => document.getElementById('datenschutz-container').innerHTML = data)
-            .catch(error => console.error('Fehler beim Laden der Datenschutzerklärung:', error));
+        document.addEventListener('DOMContentLoaded', async () => {
+            try {
+                const response = await fetch('/components/datenschutzerklaerung.html');
+                if (!response.ok) throw new Error('Fehler beim Laden');
+                const content = await response.text();
+                document.getElementById("datenschutz-container").innerHTML = content;
+            } catch (error) {
+                console.error('Fehler:', error);
+                document.getElementById("datenschutz-container").innerHTML = `
+                    <div class="bg-red-50 p-4 rounded-lg text-red-700 text-center">
+                        ❌ Die Datenschutzerklärung konnte nicht geladen werden
+                    </div>
+                `;
+            }
+        });
     </script>
 
-    <!-- Footer wird hier dynamisch geladen -->
-    <div id="footer"></div>
-
-    <script src="../scripts/main.js"></script>
-    
+    <div id="footer" role="contentinfo"></div>
+    <script src="/scripts/main.js"></script>
 </body>
 </html>
