--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -3,43 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impressum</title>
+    <title>Impressum - Affiliate Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
-<body>
 
-    <!-- Header wird hier dynamisch geladen -->
-    <div id="header"></div>
+<body class="bg-gray-100 flex flex-col min-h-screen">
+    <div id="header" role="banner"></div>
 
-    <main class="container ml-8 mt-8 text-left">
-        <!-- Hier wird der Impressumstext geladen -->
-        <div id="impressum-inhalt">Lade Impressum...</div>
+    <main role="main" class="flex-grow container mx-auto p-6">
+        <div id="impressum-inhalt" class="max-w-3xl mx-auto bg-white rounded-lg shadow-md p-6">
+            <div class="text-center py-8">
+                <div class="loading-spinner inline-block w-8 h-8 border-4 border-blue-500 border-t-transparent rounded-full"></div>
+                <p class="mt-4 text-gray-600">Impressum wird geladen...</p>
+            </div>
+        </div>
     </main>
 
-    <!-- Footer wird hier dynamisch geladen -->
-    <div id="footer"></div>
-
     <script>
-        // Impressumstext per fetch() laden
-        document.addEventListener("DOMContentLoaded", function () {
-            fetch("../components/impressumtext.html")
-                .then(response => {
-                    if (!response.ok) throw new Error("Fehler beim Laden der Impressumsseite.");
-                    return response.text();
-                })
-                .then(html => {
-                    document.getElementById("impressum-inhalt").innerHTML = html;
-                })
-                .catch(error => {
-                    console.error(error);
-                    document.getElementById("impressum-inhalt").innerHTML = "Fehler beim Laden des Impressums.";
-                });
+        document.addEventListener('DOMContentLoaded', async () => {
+            try {
+                const response = await fetch('/components/impressumtext.html');
+                if (!response.ok) throw new Error('Fehler beim Laden');
+                const content = await response.text();
+                document.getElementById("impressum-inhalt").innerHTML = content;
+            } catch (error) {
+                console.error('Fehler:', error);
+                document.getElementById("impressum-inhalt").innerHTML = `
+                    <div class="bg-red-50 p-4 rounded-lg text-red-700 text-center">
+                        ❌ Das Impressum konnte nicht geladen werden
+                    </div>
+                `;
+            }
         });
     </script>
-        
-    <script src="../scripts/main.js"></script>
 
-
+    <div id="footer" role="contentinfo"></div>
+    <script src="/scripts/main.js"></script>
 </body>
 </html>
