--- a/404.html
+++ b/404.html
@@ -2,6 +2,15 @@
 <html>
 <head>
     <title>404 - Seite nicht gefunden</title>
+    <!-- Standard-Favicon -->
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+
+<!-- Für moderne Browser -->
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+<!-- Für Apple-Geräte -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 </head>
 <body>
     <h1>404 Error</h1>
