--- a/pages/angebote.html
+++ b/pages/angebote.html
@@ -7,6 +7,16 @@
     <title>Angebote - Affiliate Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/styles/main.css">
+
+        <!-- Standard-Favicon -->
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+
+<!-- Für moderne Browser -->
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+<!-- Für Apple-Geräte -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 </head>
 
 <body class="bg-gray-100 flex flex-col min-h-screen">
